force-app/main/default/objects/Course__c/fields/Course_Amount_In_INR__c.field-meta.xml
<CustomField>
    <fullName>Course_Amount_In_INR__c</fullName>
    <label>Course Amount In INR</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>