force-app/main/default/objects/Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Course Code can only be a maximum of six characters including special characters(*@#$%,-)</inlineHelpText>
    <label>Course Code</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>