force-app/main/default/objects/Course__c/fields/Course_Details__c.field-meta.xml
<CustomField>
    <fullName>Course_Details__c</fullName>
    <label>Course Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>