force-app/main/default/objects/Course__c/fields/Enrollment_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Email_Content__c</fullName>
    <label>Enrollment Email Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>