force-app/main/default/objects/Course__c/fields/Exam_Fees_in_INR__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fees_in_INR__c</fullName>
    <label>Exam Fees in INR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>