force-app/main/default/objects/Course__c/fields/Exam_Fees_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fees_in_USD__c</fullName>
    <label>Exam Fees in USD</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>