force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Course_Amount_In_INR__c</columns>
    <columns>Course_Amount_In_USD__c</columns>
    <columns>Email_Content__c</columns>
    <columns>Course_Details__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>