force-app/main/default/objects/Course__c/listViews/Course_List_Views.listView-meta.xml
<ListView>
    <fullName>Course_List_Views</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Course_Amount_In_INR__c</columns>
    <columns>Course_Amount_In_USD__c</columns>
    <columns>Course_Details__c</columns>
    <filterScope>Mine</filterScope>
    <label>Course List Views</label>
</ListView>